fix subnavigation links in dark mode

--- a/packages/styles/_sass/pm-styles/_pm-navigation.scss
+++ b/packages/styles/_sass/pm-styles/_pm-navigation.scss
@@ -163,7 +163,7 @@ $padding-left-link: 2rem !default;
     }
     .navigation__sublink {
       border-left: 0;
-      border-right: 2px solid var(--fillcolor-icons, $navigation-fillcolor-icons);
+      border-right: 2px solid $navigation-fillcolor-icons;
       padding: .75rem 1.5rem .75rem 1rem;
       &:hover {
         border-left: 0;
